                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-03-2006 updated: Icelandic language file (Thnx to kristjan)
 - 13-03-2005 updated: Spanish language file (Thnx to chevi)
 - 13-03-2006 updated: French language file (Thnx to modhack)
 - 13-03-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 13-03-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 13-03-2006 updated: German language file
 - 13-03-2006 updated: Dutch language file (Thnx to console-ombouw)
 - 13-03-2006 updated: Portuguese (Brazil) language file (Thnx to mvbm)
 - 13-03-2006 updated: Swedish language file (Thnx to blittan)
 - 13-03-2006 updated: Norwegian language file (Thnx to vnm)
 - 13-03-2006 added: Filename, time, playcount and tracknumber to Smart playlists.
 - 13-03-2006 fixed: IMDb thumbs were not applied to the folder correctly.
 - 13-03-2006 added: ListItem.Thumb works for the filebrowser as well as media windows.
 - 13-03-2006 fixed: Removed a bunch of swprintf() (possible buffer overruns).
 - 13-03-2006 added: half resolution decoding to dvdplayer and mplayer. if source is larger than 1280 pixels in width and decoded with ffmpeg, it will be decoded at half resolution
 - 13-03-2006 fixed: dvdplayer ff/rw didn't resume properly after the pause fix.
 - 12-03-2006 fixed: file names with ',' inside archives.
 - 12-03-2006 fixed: dvdplayer would sometimes stall in the middle of a movie
 - 12-03-2006 fixed: navigation (highlight) would apear to have laggy on menu's with multiple sequential overlays. (ex. original matrix ntsc dvd )
 - 12-03-2006 fixed: dvdplayer would drop loads of frames when resuming from pause.